--- a/CheckBake/Base.lproj/Main.storyboard
+++ b/CheckBake/Base.lproj/Main.storyboard
@@ -213,7 +213,7 @@
             </objects>
             <point key="canvasLocation" x="-2426" y="-424"/>
         </scene>
-        <!--Orders-->
+        <!--Orders List-->
         <scene sceneID="tzJ-6a-yH1">
             <objects>
                 <viewController id="ga9-J8-vun" customClass="OrdersVC" customModule="CheckBake" customModuleProvider="target" sceneMemberID="viewController">
@@ -265,39 +265,6 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M19-3G-FXN">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Title" id="ioD-jg-Oys"/>
-                                </items>
-                            </navigationBar>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N1Q-7J-kL2">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Title" id="aDZ-lu-TPl"/>
-                                </items>
-                            </navigationBar>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QOd-It-nIU">
-                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Orders List" id="m8a-WO-I1v">
-                                        <barButtonItem key="rightBarButtonItem" style="plain" id="ysB-ih-EpQ">
-                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="No9-vi-cVT">
-                                                <rect key="frame" x="347.5" y="5" width="46.5" height="34"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system"/>
-                                                <connections>
-                                                    <segue destination="VbE-0V-dxM" kind="presentation" id="pt5-bg-cek"/>
-                                                </connections>
-                                            </button>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ocZ-gb-PKU"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -309,6 +276,19 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Orders" image="calendar" catalog="system" id="HD6a-zw-LDr"/>
+                    <navigationItem key="navigationItem" title="Orders List" id="m8a-WO-I1v">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="ysB-ih-EpQ">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="No9-vi-cVT">
+                                <rect key="frame" x="347.5" y="5" width="46.5" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system"/>
+                                <connections>
+                                    <segue destination="VbE-0V-dxM" kind="presentation" id="0yR-LK-VUN"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="fm3-BO-VMt" id="54r-BV-xzx"/>
                     </connections>
@@ -512,7 +492,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="ga9-J8-vun" kind="relationship" relationship="rootViewController" id="1aL-HO-o1p"/>
+                        <segue destination="ga9-J8-vun" kind="relationship" relationship="rootViewController" id="dC7-Jm-kDU"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bed-ZO-fPK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
